--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     {{#each burgers}} {{#unless devoured}}
     <li>
         <p>{{id}}. {{burger_name}}</p>
-        <button data-planid="{{id}}" class="devourbtn">Devour it!</button>
+        <button data-id="{{id}}" class="devourbtn">Devour it!</button>
     </li>
     {{/unless}} {{/each}}
 </ul>
@@ -22,8 +22,8 @@
 <form class="create-form">
 
     <div class="form-group">
-        <label for="ca">Enter a new burger here:</label>
-        <input type="text" id="ca" name="name">
+        <label for="burgername">Enter a new burger here:</label>
+        <input type="text" id="burgername" name="name">
     </div>
 
     <button type="submit">Submit</button>
