added the main js file to the main handelbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
     <title>Burger site</title>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="/assets/js/main.js"></script>
 </head>
 
 <body>
