--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
     <title>Burger site</title>
     <script src="https://code.jquery.com/jquery.js"></script>
